--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: santa
-          image: prashantritgit/santa123:latest # Image that will be used to containers in the cluster
+          image: prashantritgit/santa111:latest # Image that will be used to containers in the cluster
           imagePullPolicy: Always
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
@@ -33,4 +33,4 @@ spec:
     - protocol: "TCP"
       port: 8080 # The port that the service is running on in the cluster
       targetPort: 8080 # The port exposed by the service
-  type: LoadBalancer # type of the service.
+  type: NodePort # type of the service.
