--- a/deployment-service.yaml
+++ b/deployment-service.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: santa
-          image: prashantritgit/santa111:latest # Image that will be used to containers in the cluster
+          image: prashantritgit/santa:1 # Image that will be used to containers in the cluster
           imagePullPolicy: Always
           ports:
             - containerPort: 8080 # The port that the container is running on in the cluster
